# embedded-menu

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
embedded-menu-macros/: Cargo.toml
embedded-menu-macros/src/: lib.rs  menu.rs  selectable.rs
examples/: clamped.rs  color.rs  color_single_touch.rs  details_dev.rs  font.rs  interaction_types.rs  macros.rs  no_title.rs  owned.rs  save_state.rs  scrolling.rs  scrolling_single_touch.rs  scrolling_slice.rs  simple.rs  small.rs
src/: builder.rs  collection.rs  lib.rs  margin.rs  plumbing.rs  styled.rs
src/adapters/: color_map.rs  constrain.rs  invert.rs  mod.rs
src/interaction/: mod.rs  programmed.rs  simulator.rs  single_touch.rs
src/items/: menu_item.rs  mod.rs  navigation_item.rs  section_title.rs  select.rs
src/selection_indicator/: animated.rs  mod.rs  simple.rs
src/selection_indicator/style/: animated_triangle.rs  border.rs  invert.rs  line.rs  mod.rs  rectangle.rs  triangle.rs
src/theme/: mod.rs
