[package]
name = "embedded-menu"
version = "0.2.0-dev"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-interface = "0.4"
embedded-graphics = "0.7.1"
embedded-layout = "0.2.0"
embedded-text = "0.5.0"

[dev-dependencies]
embedded-graphics-simulator = "0.4.1"
