[package]
name = "embedded-menu"
version = "0.2.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
description = "Simple interactive menu for embedded devices"
license = "MIT"
repository = "https://github.com/bugadani/embedded-menu"
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.0"
embedded-layout = "0.3.0"
embedded-text = "0.6.0"

embedded-menu-macros = { version = "0.1", path = "embedded-menu-macros" }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"

[workspace]
members = [
    ".",
    "embedded-menu-macros"
]