[package]
name = "embedded-menu"
version = "0.5.4"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
description = "Simple interactive menu for embedded devices"
license = "MIT"
repository = "https://github.com/bugadani/embedded-menu"
categories = ["embedded", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.0"
embedded-layout = "0.4.0"
embedded-text = "0.7"

embedded-menu-macros = { version = "0.3.0", path = "embedded-menu-macros" }

embedded-graphics-simulator = { version = "0.5.0", optional = true }

[features]
simulator = ["embedded-graphics-simulator"]

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
rayon-core = "=1.11"

[workspace]
members = [".", "embedded-menu-macros"]

[[example]]
name = "font"
required-features = ["simulator"]

[[example]]
name = "no_title"
required-features = ["simulator"]

[[example]]
name = "owned"
required-features = ["simulator"]

[[example]]
name = "save_state"
required-features = ["simulator"]

[[example]]
name = "scrolling"
required-features = ["simulator"]

[[example]]
name = "scrolling_slice"
required-features = ["simulator"]

[[example]]
name = "small"
required-features = ["simulator"]

[[example]]
name = "color"
required-features = ["simulator"]
