[package]
name = "embedded-menu-macros"
version = "0.1.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [ "proc-macro", "full", "extra-traits", "derive", "parsing", "printing" ] }
