[package]
name = "embedded-menu-macros"
version = "0.3.1"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
description = "Derive macro implementations for embedded-menu"
license = "MIT"
repository = "https://github.com/bugadani/embedded-menu"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [
    "clone-impls",
    "proc-macro",
    "full",
    "extra-traits",
    "derive",
    "parsing",
    "printing",
] }
